<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="SValue" Id="{8b32d60a-f461-44ec-8937-d4b17922f5fb}">
    <Declaration><![CDATA[TYPE SValue :
STRUCT
	DataType: EDataType;
	Value: UValues;
	Defined: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>